# TOSTI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.yml  docker-compose.yml.example  entrypoint.sh  entrypoint_cron.sh  genindex.html  get-pip.py  index.html  installation.html  marietje.html  modules.html  objects.inv  orders.html  overview.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  thaliedje.html  tosti.html  users.html  venues.html
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  deploy.yaml  docker-image.yml  docker.yaml  docs-update.yaml  docs.yaml  fix-sudoers.yml  linting.yaml  linting.yml  testing.yaml
_sources/: modules.rst.txt  overview.rst.txt  users.rst.txt  venues.rst.txt
database_init/: setup.sql.example
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  marietje.rst  modules.rst  orders.rst  overview.rst  thaliedje.rst  tosti.rst  users.rst  venues.rst
logo/: logo.ai
nginx/: nginx.conf
nginx/conf.d/: tosti.conf
resources/: entrypoint.sh
ssh/: id_job_doesburg.pub  id_jochem_kampman.pub  id_kees_van_kempen.pub  id_lars_van_rhijn.pub  id_vince_van_diermen.pub
tosti/tosti/: urls.py  wsgi.py
website/: manage.py
website/age/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py  yivi.py
website/age/migrations/: 0001_initial.py  0002_alter_is18yearsold_user.py  0002_initial.py  0003_sessionmapping.py  0004_alter_sessionmapping_session_token.py
website/announcements/: admin.py  apps.py  context_processors.py  middleware.py  models.py  services.py
website/announcements/migrations/: 0001_initial.py
website/announcements/templatetags/: announcements.py  bleach_tags.py
website/announcements/tests/: test_services.py
website/associations/: admin.py  apps.py  converters.py  fixtures.py  models.py
website/associations/fixtures/: associations.json
website/associations/migrations/: 0001_initial.py  0002_alter_association_id.py
website/borrel/: README.md  admin.py  apps.py  fixtures.py  forms.py  mixins.py  models.py  resources.py  selectors.py  services.py  signals.py  urls.py  views.py
website/borrel/fixtures/: borrel.json
website/borrel/migrations/: 0001_initial.py  0002_auto_20211019_2107.py  0002_initial.py  0002_reservationrequest_accepted.py  0003_alter_reservationitem_unique_together.py  0003_auto_20220221_1848.py  0003_delete_basicborrelbrevet.py  0004_alter_borrelreservation_options.py  0004_auto_20220225_1108.py  0005_alter_borrelreservation_end.py  0005_auto_20220719_1328.py  0006_alter_borrelreservation_join_code.py  0006_auto_20220304_1648.py  0007_auto_20220304_1651.py
website/borrel/templatetags/: borrel_reservations.py
website/cron/: README.md  admin.py  apps.py  core.py  cron.py  helpers.py  models.py
website/cron/migrations/: 0001_initial.py
website/cron/tests/: crons.py  test_crons.py
website/fridges/: admin.py  apps.py  converters.py  models.py  services.py  urls.py  views.py
website/fridges/migrations/: 0001_initial.py  0002_fridge_minimum_age.py  0002_initial.py
website/marietje/: admin.py  admin_views.py  apps.py  converters.py  forms.py  models.py  services.py  urls.py  views.py
website/marietje/migrations/: 0001_initial.py  0002_auto_20200531_2253.py  0002_auto_20200626_0038.py  0002_auto_20210117_1856.py  0003_auto_20200531_2340.py  0003_auto_20200628_1144.py  0004_auto_20200601_0940.py  0004_auto_20200707_1228.py  0004_auto_20200707_1233.py  (+1 more)
website/marietje/templatetags/: queue.py  (+2 more)
website/orders/: README.md  __init__.py  admin.py  apps.py  converters.py  exceptions.py  fixtures.py  forms.py  mcp.py  models.py  permissions.py  resources.py  services.py  signals.py  urls.py  validators.py  views.py
website/qualifications/: admin.py  apps.py  mixins.py  models.py  resources.py
website/settings/: admin.py  apps.py  models.py  settings.py
website/silvasoft/: admin.py  apps.py  crons.py  forms.py  models.py  services.py  signals.py  tasks.py
website/sp/: backends.py  models.py  utils.py  views.py
website/status_screen/: apps.py  urls.py  views.py
website/tampon/: admin.py  apps.py  forms.py  models.py  permissions.py  urls.py  views.py
website/tantalus/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  settings.py  signals.py
website/thaliedje/: README.md  admin.py  admin_views.py  apps.py  converters.py  crons.py  forms.py  marietje.py  mcp.py  models.py  services.py  spotify.py  tasks.py  tests_mcp.py  urls.py  views.py
website/tosti/: README.md  __init__.py  admin.py  apps.py  cache.py  celery.py  context_processors.py  crons.py  django_cron_app_config.py  filter.py  forms.py  mcp.py  metrics.py  middleware.py  oauth_discovery.py  services.py  settings.py  signals.py  sp_app_config.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
website/transactions/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
website/users/: admin.py  apps.py  fixtures.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
website/venues/: README.md  admin.py  apps.py  converters.py  fixtures.py  forms.py  mcp.py  models.py  selectors.py  services.py  signals.py  urls.py  views.py
website/yivi/: apps.py  crons.py  models.py  services.py  signals.py  tasks.py  yivi.py
(+456 files in other folders)
