[project]
name = "tosti"
version = "4.0.0"
description = "Tartarus Order System for Take-away Items"
authors = ["Job Doesburg <job.doesburg@gmail.com>", "Lars van Rhijn <larsvanrhijn@gmail.com>"]
maintainers = ["Job Doesburg <job.doesburg@gmail.com>", "Lars van Rhijn <larsvanrhijn@gmail.com>"]
readme = "README.md"
repository = "https://github.com/KiOui/TOSTI"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "bleach[css]>=6.3.0",
    "coverage>=7.13.5",
    "cryptography>=43.0.3",
    "django>=6.0.4",
    "django-admin-autocomplete-filter>=0.7.1",
    "django-admin-rangefilter>=0.13.5",
    "django-autocompletefilter>=0.0.9",
    "django-bootstrap5>=26.2",
    "django-constance>=4.3.5", # No official support for Django 6.0.
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-guardian>=3.3.1",
    "django-ical>=1.9.2", # No official support for Django 6.0.
    "django-import-export>=4.4.0",
    "django-model-utils>=5.0.0",
    "django-oauth-toolkit>=3.2.0",
    "django-queryable-properties>=1.12.1",
    "django-tinymce>=5.0.0",
    "djangorestframework>=3.17.1",
    "djangosaml2>=1.12.0", # No official support for Django 6.0.
    "fontawesomefree>=6.6.0",
    "html2text>=2025.4.15",
    "inflection>=0.5.1",
    "pillow>=12.2.0",
    "pyopenssl>=24.2.1",
    "pysaml2>=7.5.4",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "spotipy>=2.26.0",
    "tomli>=2.4.1",
    "uritemplate>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "freezegun>=1.5.5",
]

[tool.black]
exclude = '''
/(
  migrations
  | website/tosti/settings
)/
'''
